--- a/package.json
+++ b/package.json
@@ -12,16 +12,17 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "eslint": "^8.56.0",
+    "eslint": "^8.0.1",
     "express": "^4.18.2",
     "ioredis": "^5.3.2",
     "jest": "^29.7.0",
+    "prettier": "^3.2.1",
     "redis": "^4.6.12",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.3.3"
+    "typescript": "*"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
@@ -30,6 +31,11 @@
     "@types/ioredis": "^5.0.0",
     "@types/jest": "^29.5.11",
     "@types/redis": "^4.0.11",
-    "@types/supertest": "^6.0.2"
+    "@types/supertest": "^6.0.2",
+    "@typescript-eslint/eslint-plugin": "^6.4.0",
+    "eslint-config-standard-with-typescript": "^43.0.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-n": "^15.0.0 || ^16.0.0 ",
+    "eslint-plugin-promise": "^6.0.0"
   }
 }
